queue page for user, home styling, home mobile, navmenu collapse styling, lags fixed

--- a/ClientApp/src/components/GeneralQueue.scss
+++ b/ClientApp/src/components/GeneralQueue.scss
@@ -84,7 +84,6 @@
 
 .ppl_inqueue {
     @extend .base_button;
-    background-color: white;
     font-size: 8vw;
     cursor: default;
 }
@@ -128,7 +127,7 @@
     margin-right: 25px;
 }
 
-.col-9 {
+.queue_name_col {
     display: flex;
     align-items: center;
 }
@@ -144,7 +143,10 @@
     height: 36px;
     background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0) 23.44%, rgba(0, 0, 0, 0.2) 100%);
     border-radius: (50% 50% 50% 50%);
+    flex-shrink: 0;
+    flex-grow: 0;
 }
+
 
 @media (max-width: 575.98px) {
     .queue {
